# rust-learning

./: .gitlab-ci.yml  Cargo.toml  check.sh  deny.toml  readme.md  run.sh
.github/workflows/: rust.yml
actix-vue-websocket/: Cargo.toml  readme.md
actix-vue-websocket/html/: index.html  script.js
actix-vue-websocket/src/: lib.rs  main.rs  websocket.rs
async-await/: Cargo.toml
async-await/src/: main.rs
autotests/: Cargo.toml
autotests/src/: lib.rs
blockchain/: .gitlab-ci.yml  Cargo.toml  readme.md
blockchain/src/: block.rs  blockchain.rs  hashable.rs  lib.rs  main.rs  transaction.rs
closures/: Cargo.toml
closures/src/: main.rs
coins/: Cargo.toml
coins/src/: coin.rs  main.rs
collections/: Cargo.toml
collections/src/: main.rs
error/: Cargo.toml  hello.txt
error/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: lib.rs  main.rs
generic-types/: Cargo.toml
generic-types/src/: main.rs
gj-panama/: Cargo.toml
gj-panama/src/: lib.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hashmap/: Cargo.toml
hashmap/src/: main.rs
hello_cargo/: Cargo.toml
hello_cargo/src/: main.rs  sound.rs
jon-gjengset/await-async/: Cargo.toml
jon-gjengset/await-async/src/: main.rs  tcp.rs
lifetime-jon/: Cargo.toml
lifetimes/: Cargo.toml
lifetimes-jon/: Cargo.toml
lifetimes-jon/src/: lib.rs
lifetimes/src/: main.rs
loops/: Cargo.toml
loops/src/: lib.rs  main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
person/: .gitlab-ci.yml  Cargo.toml
person/src/: main.rs  print.rs  test.rs
reference-cycle/: Cargo.toml
reference-cycle/src/: main.rs
smart-pointers/: Cargo.toml
smart-pointers/src/: lib.rs  main.rs
src/: lib.rs  main.2.rs  main.rs  print.rs  structs.rs  test.rs  types.rs
src/jon/: hashmap.rs
strings/: Cargo.toml
strings/src/: main.rs
testing/: Cargo.toml
testing/src/: lib.rs  main.rs
threads/: Cargo.toml
threads/src/: actix-short.rs  actix.rs  lib.rs  main.rs  thread-example.rs  thread-msg.rs
trait_bench/: Cargo.toml
trait_bench/src/: main.rs
trait_bench_orig/: Cargo.toml
trait_bench_orig/src/: main.rs
traits/: Cargo.toml
traits/src/: main.rs
vecmacro/: Cargo.toml  readme.md
vecmacro/src/: lib.rs
