[package]
name = "error_handling"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
workspace = ".."

[lib]
name = "errlib"
path = "src/lib.rs"

[[bin]]
name = "error_handling"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tempfile = "3.1.0"