[package]
name = "loops"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "looplib"
path = "src/lib.rs"

[[bin]]
name = "loops"
path = "src/main.rs"

[dependencies]
