[package]
name = "threadlib"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
workspace = ".."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "threadlib"
path = "src/lib.rs"

[[bin]]
name = "threads"
path = "src/main.rs"

[dependencies]
