[package]
name = "threads"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
workspace = ".."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "threadlib"
path = "src/lib.rs"

[[bin]]
name = "threads"
path = "src/main.rs"

[[bin]]
name = "thread-msg"
path = "src/thread-msg.rs"

[[bin]]
name = "actix"
path = "src/actix.rs"

[[bin]]
name = "actix-short"
path = "src/actix-short.rs"


[[bin]]
name = "thread-example"
path = "src/thread-example.rs"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
