[package]
name = "await-async"
version = "0.1.0"
authors = ["Filip Bucek <fbucek@invloop.cz>"]
edition = "2018"
workspace = "../.."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "await-async"
path = "src/main.rs"

[[bin]]
name = "tcp"
path = "src/tcp.rs"

[dependencies]
